--- a/application/executable/pom.xml
+++ b/application/executable/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>dev.sheldan.crimson.application</groupId>
         <artifactId>application</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>executable</artifactId>
@@ -74,6 +74,11 @@
         <dependency>
             <groupId>dev.sheldan.abstracto.modules</groupId>
             <artifactId>utility-impl</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.sheldan.abstracto.modules</groupId>
+            <artifactId>remind-impl</artifactId>
         </dependency>
 
         <dependency>
