--- a/deployment/helm/crimson/templates/api-keys.yaml
+++ b/deployment/helm/crimson/templates/api-keys.yaml
@@ -6,3 +6,4 @@ data:
   discordToken: {{ $.Values.apiKeys.discord.token | b64enc }} # b64enc is needed, because a stringData secret field cannot hold numeric values
   youtubeApiKey: {{ $.Values.apiKeys.youtube.apiKey | b64enc }}
   openWeatherMapApiKey: {{ $.Values.apiKeys.openWeatherMap.apiKey | b64enc }}
+  freeCurrencyApiApiKey: {{ $.Values.apiKeys.freeCurrencyApi.apiKey | b64enc }}
