--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
     <groupId>dev.sheldan.crimson</groupId>
     <artifactId>crimson</artifactId>
     <name>Crimson</name>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
-        <abstracto.version>1.5.39-SNAPSHOT</abstracto.version>
-        <abstracto.templates.version>1.4.39-SNAPSHOT</abstracto.templates.version>
+        <abstracto.version>1.6.0</abstracto.version>
+        <abstracto.templates.version>1.4.52</abstracto.templates.version>
     </properties>
 
     <modules>
